# analise_sindrome_gripal_esus

./: .gitignore  Dockerfile  demo.ipynb  docker-compose.yml  pyproject.toml
docker/: Dockerfile  docker-compose.yml
sql/: modelagem_final.sql
src/: Limpeza.ipynb  demo.ipynb  pipeline.py
src/dashboard/: db.py  main.py  queries.py
